# dircmp

./: Cargo.toml  README.md
.github/workflows/: build.yml
dircmp/: Cargo.toml
dircmp/examples/: demo.rs
dircmp/src/: lib.rs
dircmp/tests/: compare_test.rs
dircmp/tests/fixtures/foo/: a.txt
xtask/: Cargo.toml
